test/tests/stages/18_structures/invalid_types/tag_resolution/member_name_wrong_scope_nested.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[57]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(outer)
  {
  struct
  identifier(s)
  identifier(inner)
  ;
  }
  ;
  struct
  identifier(outer)
  identifier(foo)
  =
  {
  {
  const int(1)
  }
  }
  ;
  struct
  identifier(s)
  {
  int
  identifier(b)
  ;
  }
  ;
  struct
  identifier(outer)
  *
  identifier(ptr)
  =
  &
  identifier(foo)
  ;
  return
  identifier(ptr)
  ->
  identifier(inner)
  .
  identifier(b)
  ;
  }
